<resources>
    <string name="app_name">HORUS</string>
    <string name="item1">Administradores</string>
    <string name="item2">Cambiar contraseña</string>
    <string name="item3">Armado</string>
    <string name="item4">Alarmas</string>
    <string name="item5">Reiniciar</string>
    <string name="item6">Configuración</string>
    <string name="item7">Eliminar</string>
    <string name="version_tag">version 0.0.12</string>
    <string name="btn_list">Configurar</string>
    <string name="title_activity_map">Mapa ubicación</string>
    <string name="title_activity_admin">Administradores</string>
    <string name="title_activity_adminCrud">Detalles administrador</string>
    <string name="title_activity_cofiguracion">Configuración</string>
    <string name="title_activity_contrasena">Cambiar contraseña</string>
    <string name="title_activity_dispositivo">Detalles dispositivo</string>
    <string name="title_activity_home">Horus</string>
    <string name="title_activity_info">Información</string>
    <string name="title_activity_status">Estado del dispositivo</string>
    <string name="title_activity_saldo">Control de saldo</string>
    <string name="title_activity_ubicacion">Detalles de ubicación</string>
    <string name="title_activity_desactivacion">Desactivación por llave</string>
    <string name="nombre_tag">Nombre:</string>
    <string name="numero_tag">Número:</string>
    <string name="IMEI_tag">IMEI:</string>
    <string name="pass_tag">Contraseña:</string>
    <string name="btn_ver_mapa_tag">Ver en el Mapa</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
